# imc-prosperity-4-backtester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
prosperity4bt/: __main__.py  data.py  models.py  runner.py
prosperity4bt/resources/round6/: README.md
prosperity4bt/resources/round7/: README.md
prosperity4bt/resources/round8/: README.md
